--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@
 body{
     box-sizing: border-box; 
     background-color: rgb(58, 56, 56);
+    font-size:1rem;
 }
 
 /*main container */
@@ -51,13 +52,14 @@ body{
 }
 
 h1{
-    margin-top:20px;
+    margin-top:.5rem;
     box-sizing: border-box;
+    font-size: 2.5rem;
 }
 
 /* animation for clock icon at the top on ringing */
 .ringing{
-    margin-top: 20px;
+    margin-top: 1.5rem;
     animation-name:ringing ;
     animation:ringing 0.7s ease-in-out both;
     transform-origin:50% 0 ;
@@ -74,20 +76,20 @@ h1{
 
 /*To show current Tiime*/
 #clock{
-    height:230px;
-    width:50vw;
+    height:30%;
+    width:50%;
+    font-size: 10rem;
     display:flex;
     justify-content: center;
     align-items: center;
-    font-size:200px;
     background-size: 100%;;
     color:rgb(125, 42, 202);
 }
 
 /*Set Alarm container */
 #setAlarm{
-    padding:20px;
-    height:40px;
+    padding:1.5rem;
+    height:3rem;
     width:50vw;
     display:flex;
     justify-content: space-around;
@@ -102,28 +104,29 @@ h1{
 
 
 input{
-    width:50px;
-    height:30px;
-    margin-right:2px;
+    width:3rem;
+    height:2rem;
+    margin-right:.1rem;
     outline: none;
     cursor: pointer;
 }
 form{
-    margin-left:5px;
+    margin-left:.2rem;
 }
 
 input[type=radio]{
-    height:15px;
-    width:15px;
-    transform: scale(1.3);
-    font-size: 12px;
+    height:1.5rem;
+    width:1.5rem;
+    transform: scale(1.1);
+    font-size: 1.2rem;
     color:red;
+    margin-left:.6rem;
 }
 
 /* container for saving alarm and stopping ringing alarm */
 #set_container{
     width:300px;
-    height:40px;
+    height:50px;
     display: flex;
     justify-content: space-evenly;
     align-items: flex;
@@ -157,7 +160,7 @@ input[type=radio]{
 
 /* Alarm List container */
 #alarm_list_container{
-    max-height:180px;
+    max-height:11.5rem;
     width:50vw;
     display: flex;
     justify-content: flex-start;
@@ -233,13 +236,13 @@ button{
 #clear_all{
     color:white;;
     /* border:1px solid white; */
-    font-weight: bold;
+
     cursor:pointer;
     border-radius:10px;
     padding:0 17px;
     height:40px;
     margin-right:35px;
-    font-size: 16px;
+    font-size:1.2rem;
     transition:all .3s ease;
 }
 
@@ -251,3 +254,117 @@ button{
 
 
 
+@media only screen and (max-width:1000px){
+    #clock_icon{
+        font-size:4rem;
+        margin:3rem 0;
+    }
+
+    h1{
+        font-size:3.5rem;
+    }
+    #clock{
+        width:60vw;
+        font-size:9rem;
+        height:200px;
+        font-weight:bold;
+      
+    }
+
+    #setAlarm{
+        height:8rem;
+        width:50vw;
+        display:flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    #set_container{
+        width:70%;
+    }
+    #set,#stop{
+        height:5rem;
+        width:12rem;
+        font-size:3rem;
+        border:5px solid white;
+    }
+
+    #input_div{
+        width:70%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    input{
+        height:4rem;
+        width:6rem;
+        font-size:2.5rem;
+        text-align: center;
+    }
+    label{
+        font-size:2rem;
+        margin-right:1rem;
+        padding-left:.7rem;
+    }
+    form{
+        display: flex;
+        justify-content: center;
+        align-items: space-around;
+        margin-left:1rem;
+    }
+    input[type=radio]{
+        transform: scale(1.9);
+        margin-right:8px;
+    }
+
+    #alarm_list_container{
+        width:80vw;
+        max-height:29rem;
+        overflow-y: scroll;
+    }
+
+    #clear_all{
+        font-size:3rem;
+        font-weight: bold;
+        margin-bottom:-1.5rem;
+    }
+
+    .display_alarms{
+        min-height:7rem;
+        font-size:3rem;
+        
+    }
+
+    button{
+        font-size: 2rem;
+    }
+
+    #no_alarm{
+        margin-bottom: 1rem;
+    }
+
+    #alarm_list_head{
+        min-width: 70vw;;
+        font-size:2.5rem;
+        /* margin:2rem; */
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 50%;
+    }
+
+    #setAlarm{
+        min-width:70vw;
+        min-height:16rem;
+    }
+
+    h1{
+        margin-top:2rem;
+    }
+
+    h2{
+        margin:3rem 0;
+    }
+
+  
+}
