--- a/index.css
+++ b/index.css
@@ -254,55 +254,65 @@ button{
 
 
 
-@media only screen and (max-width:1000px){
+@media screen and (max-width:800px){
+
+    #container{
+        width:100%;
+    }
     #clock_icon{
-        font-size:4rem;
+        font-size:3rem;
         margin:3rem 0;
     }
 
     h1{
-        font-size:3.5rem;
+        font-size:2.5rem;
     }
     #clock{
-        width:60vw;
-        font-size:9rem;
-        height:200px;
+        max-width:60%;
+        font-size:5rem;
+        height:5rem;
         font-weight:bold;
+        margin-bottom:2.5rem;
       
     }
 
     #setAlarm{
-        height:8rem;
-        width:50vw;
+        height:auto !important;
+        width:10rem;
         display:flex;
         flex-direction: column;
         justify-content: space-around;
+
+        /* background-color: aquamarine; */
     }
 
     #set_container{
         width:70%;
+        /* background-color: blue; */
     }
     #set,#stop{
-        height:5rem;
-        width:12rem;
-        font-size:3rem;
+        height:3rem;
+        width:7rem;
+        font-size:1.7rem;
         border:5px solid white;
     }
 
     #input_div{
-        width:70%;
+        width:3rem;
         display: flex;
         justify-content: space-around;
         align-items: center;
+        height:3rem;
+        padding-bottom: 1rem;
     }
     input{
-        height:4rem;
-        width:6rem;
-        font-size:2.5rem;
+        height:2.8rem;
+        width:3rem;
+        font-size:1.5rem;
         text-align: center;
     }
     label{
-        font-size:2rem;
+        font-size:1.5rem;
         margin-right:1rem;
         padding-left:.7rem;
     }
@@ -310,15 +320,15 @@ button{
         display: flex;
         justify-content: center;
         align-items: space-around;
-        margin-left:1rem;
+        margin-left:.3rem;
     }
     input[type=radio]{
-        transform: scale(1.9);
-        margin-right:8px;
+        transform: scale(1);
+        margin-right:2px;
+        font-size:1rem;
     }
 
     #alarm_list_container{
-        width:80vw;
         max-height:29rem;
         overflow-y: scroll;
     }
@@ -330,7 +340,7 @@ button{
     }
 
     .display_alarms{
-        min-height:7rem;
+        min-height:5rem;
         font-size:3rem;
         
     }
@@ -344,27 +354,208 @@ button{
     }
 
     #alarm_list_head{
-        min-width: 70vw;;
         font-size:2.5rem;
+        height:auto;
+        padding:0 !important;
         /* margin:2rem; */
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 50%;
+        width: 80%;
     }
 
     #setAlarm{
-        min-width:70vw;
-        min-height:16rem;
+        width:70%;
+        /* height:16rem; */
+    }
+
+    /* h2{
+        margin:3rem 0;
+    } */
+
+    #no_alarm{
+        font-size:2.4rem;
+    }
+
+    #clear_all{
+        font-size:1.8rem;
+        margin-top:-2rem;
+    }
+
+    .display_alarms{
+        width:70%;
+        max-height:1.6rem !important;
+        font-size: 1.6rem;
+        width:100%;
+    }
+
+    .fa-trash{
+        font-size:2.3rem  !important;
+    }
+
+    .fa-clock-0{
+        font-size: 2.3rem !important;
+    }
+    #alarm_list_container{
+        max-height:21rem;
+        width:80%;
+        overflow-y:scroll;
+    }
+  
+}
+
+
+@media screen and (max-width:1000px){
+
+    #container{
+        width:100%;
+    }
+    #clock_icon{
+        font-size:3rem;
+        margin:3rem 0;
+    }
+
+    h1{
+        font-size:2.5rem;
+    }
+    #clock{
+        max-width:60%;
+        font-size:5rem;
+        height:5rem;
+        font-weight:bold;
+      
+    }
+
+    #setAlarm{
+        height:auto !important;
+        width:10rem;
+        display:flex;
+        flex-direction: column;
+        justify-content: space-around;
+        margin-bottom:4rem ;
+
+        /* background-color: aquamarine; */
+    }
+
+    #set_container{
+        width:70%;
+        /* background-color: blue; */
+    }
+    #set,#stop{
+        height:3rem;
+        width:7rem;
+        font-size:1.7rem;
+        border:5px solid white;
+    }
+
+    #input_div{
+        width:3rem;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        height:3rem;
+        padding-bottom: 1rem;
+    }
+    input{
+        height:2.8rem;
+        width:3rem;
+        font-size:1.5rem;
+        text-align: center;
+    }
+    label{
+        font-size:1.5rem;
+        margin-right:1rem;
+        padding-left:.7rem;
+    }
+    form{
+        display: flex;
+        justify-content: center;
+        align-items: space-around;
+        margin-left:.3rem;
+    }
+    input[type=radio]{
+        transform: scale(1);
+        margin-right:2px;
+        font-size:1rem;
+    }
+
+    #alarm_list_container{
+        max-height:29rem;
+        overflow-y: scroll;
+    }
+
+    #clear_all{
+        font-size:3rem;
+        font-weight: bold;
+        margin-bottom:-1.5rem;
+    }
+
+    .display_alarms{
+        min-height:5rem;
+        font-size:3rem;
+        
+    }
+
+    button{
+        font-size: 2rem;
+    }
+
+    #no_alarm{
+        margin-bottom: 1rem;
+    }
+
+    #alarm_list_head{
+        font-size:2.5rem;
+        height:auto;
+        padding:0 !important;
+        /* margin:2rem; */
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 80%;
+        margin-top:3rem;
+    }
+
+    #setAlarm{
+        width:70%;
+        height:16rem;
     }
 
     h1{
         margin-top:2rem;
     }
 
-    h2{
+    /* h2{
         margin:3rem 0;
+    } */
+
+    #no_alarm{
+        font-size:2.4rem;
     }
 
+    #clear_all{
+        font-size:1.8rem;
+        margin-top:-2rem;
+    }
+
+    .display_alarms{
+        width:70%;
+        max-height:1.6rem !important;
+        font-size: 1.6rem;
+        width:100%;
+    }
+
+    .fa-trash{
+        font-size:2.3rem  !important;
+    }
+
+    .fa-clock-0{
+        font-size: 2.3rem !important;
+    }
+    #alarm_list_container{
+        max-height:21rem;
+        width:80%;
+        overflow-y:scroll;
+    }
   
 }
