--- a/index.css
+++ b/index.css
@@ -97,6 +97,11 @@ h1{
     background-color: rgb(125, 42, 202);
 }
 
+#setAlarm h1{
+    font-size:1.6rem;
+    margin:0;
+}
+
 #input_div{
     display:flex;
     align-items: center;
@@ -261,23 +266,22 @@ button{
     }
     #clock_icon{
         font-size:3rem;
-        margin:3rem 0;
     }
 
     h1{
         font-size:2.5rem;
     }
     #clock{
-        max-width:60%;
-        font-size:5rem;
-        height:5rem;
+        max-width:60% !important;
+        /* font-size:5rem; */
+        height:15%;
         font-weight:bold;
-        margin-bottom:2.5rem;
+   
       
     }
 
     #setAlarm{
-        height:auto !important;
+        max-height:30% !important;
         width:10rem;
         display:flex;
         flex-direction: column;
@@ -303,7 +307,7 @@ button{
         justify-content: space-around;
         align-items: center;
         height:3rem;
-        padding-bottom: 1rem;
+
     }
     input{
         height:2.8rem;
@@ -357,6 +361,7 @@ button{
         font-size:2.5rem;
         height:auto;
         padding:0 !important;
+        margin:0;
         /* margin:2rem; */
         display: flex;
         justify-content: space-between;
@@ -397,6 +402,7 @@ button{
         font-size: 2.3rem !important;
     }
     #alarm_list_container{
+        height:40vh !important;
         max-height:21rem;
         width:80%;
         overflow-y:scroll;
@@ -411,8 +417,7 @@ button{
         width:100%;
     }
     #clock_icon{
-        font-size:3rem;
-        margin:3rem 0;
+        font-size:2rem;
     }
 
     h1{
@@ -421,7 +426,7 @@ button{
     #clock{
         max-width:60%;
         font-size:5rem;
-        height:5rem;
+        height:15%;
         font-weight:bold;
       
     }
@@ -432,7 +437,6 @@ button{
         display:flex;
         flex-direction: column;
         justify-content: space-around;
-        margin-bottom:4rem ;
 
         /* background-color: aquamarine; */
     }
@@ -500,9 +504,9 @@ button{
         font-size: 2rem;
     }
 
-    #no_alarm{
+    /* #no_alarm{
         margin-bottom: 1rem;
-    }
+    } */
 
     #alarm_list_head{
         font-size:2.5rem;
@@ -513,7 +517,7 @@ button{
         justify-content: space-between;
         align-items: center;
         width: 80%;
-        margin-top:3rem;
+        margin-top:1rem;
     }
 
     #setAlarm{
@@ -521,20 +525,20 @@ button{
         height:16rem;
     }
 
-    h1{
+    /* h1{
         margin-top:2rem;
-    }
+    } */
 
     /* h2{
         margin:3rem 0;
     } */
 
     #no_alarm{
-        font-size:2.4rem;
+        font-size:1.4rem;
     }
 
     #clear_all{
-        font-size:1.8rem;
+        font-size:1.2rem;
         margin-top:-2rem;
     }
 
@@ -553,9 +557,340 @@ button{
         font-size: 2.3rem !important;
     }
     #alarm_list_container{
+        height:40% !important;
         max-height:21rem;
         width:80%;
         overflow-y:scroll;
     }
   
+    #setAlarm h1{
+        font-size:1.8rem;
+        margin-bottom:.8rem;
+    }
+}
+
+
+@media screen and (max-width:500px){
+
+    #container{
+        width:100%;
+        height: 100%;
+    }
+    #clock_icon{
+        font-size:2rem;
+    }
+
+    h1{
+        font-size:2.5rem;
+    }
+    #clock{
+        max-width:60%;
+        font-size:5rem;
+        height:15%;
+        font-weight:bold;
+      
+    }
+
+    #setAlarm{
+        height:auto !important;
+        width:10rem;
+        display:flex;
+        flex-direction: column;
+        justify-content: space-around;
+
+        /* background-color: aquamarine; */
+    }
+
+    #set_container{
+        width:70%;
+        /* background-color: blue; */
+    }
+    #set,#stop{
+        height:3rem;
+        width:7rem;
+        font-size:1.7rem;
+        border:5px solid white;
+    }
+
+    #input_div{
+        width:3rem;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        height:3rem;
+        padding-bottom: 1rem;
+    }
+    input{
+        height:2.8rem;
+        width:3rem;
+        font-size:1.5rem;
+        text-align: center;
+    }
+    label{
+        font-size:1.5rem;
+        margin-right:1rem;
+        padding-left:.7rem;
+    }
+    form{
+        display: flex;
+        justify-content: center;
+        align-items: space-around;
+        margin-left:.3rem;
+    }
+    input[type=radio]{
+        transform: scale(1);
+        margin-right:2px;
+        font-size:1rem;
+    }
+
+    #alarm_list_container{
+        max-height:29rem;
+        overflow-y: scroll;
+    }
+
+    #clear_all{
+        font-size:3rem;
+        font-weight: bold;
+        margin-bottom:-1.5rem;
+    }
+
+    .display_alarms{
+        min-height:5rem;
+        font-size:3rem;
+        
+    }
+
+    button{
+        font-size: 2rem;
+    }
+
+    /* #no_alarm{
+        margin-bottom: 1rem;
+    } */
+
+    #alarm_list_head{
+        font-size:2.5rem;
+        height:auto;
+        padding:0 !important;
+        /* margin:2rem; */
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 80%;
+        margin-top:1rem;
+    }
+
+    #setAlarm{
+        width:70%;
+        height:16rem;
+    }
+
+    /* h1{
+        margin-top:2rem;
+    } */
+
+    /* h2{
+        margin:3rem 0;
+    } */
+
+    #no_alarm{
+        font-size:1.4rem;
+    }
+
+    #clear_all{
+        font-size:1.2rem;
+        margin-top:-2rem;
+    }
+
+    .display_alarms{
+        width:70%;
+        max-height:1.6rem !important;
+        font-size: 1.6rem;
+        width:100%;
+    }
+
+    .fa-trash{
+        font-size:2.3rem  !important;
+    }
+
+    .fa-clock-0{
+        font-size: 2.3rem !important;
+    }
+    #alarm_list_container{
+        height:40% !important;
+        max-height:21rem;
+        width:80%;
+        overflow-y:scroll;
+    }
+  
+    #setAlarm h1{
+        font-size:1.8rem;
+        margin-bottom:.8rem;
+    }
+}
+
+
+@media screen and (max-width:470px){
+
+    *{
+        box-sizing:border-box;
+    }
+    #container{
+        width:100%;
+        height:100%;
+    }
+    #clock_icon{
+        font-size:1.5rem;
+        margin-bottom: 1.rem;
+    }
+
+    h1{
+        font-size:2.5rem;
+    }
+    #clock{
+        width:60%!important;
+        font-size:4rem;
+        height:15%;
+        font-weight:bold;
+      
+    }
+
+    #setAlarm{
+        height:auto !important;
+        width:10rem;
+        display:flex;
+        flex-direction: column;
+        justify-content: space-around;
+
+        /* background-color: aquamarine; */
+    }
+
+    #set_container{
+        width:70%;
+        /* background-color: blue; */
+    }
+    #set,#stop{
+        height:3rem;
+        width:7rem;
+        font-size:1.7rem;
+        border:5px solid white;
+    }
+
+    #input_div{
+        width:3rem;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        height:3rem;
+        padding-bottom: 1rem;
+    }
+    input{
+        height:2.8rem;
+        width:2.4rem;
+        font-size:1.5rem;
+        text-align: center;
+    }
+    label{
+        font-size:1.5rem;
+        margin-right:.3rem;
+        padding-left:.3rem;
+    }
+    form{
+        display: flex;
+        justify-content: center;
+        align-items: space-around;
+        margin-left:.3rem;
+    }
+    input[type=radio]{
+        transform: scale(1);
+        /* margin-right:2px; */
+        font-size:1rem;
+        margin:0;
+        padding:0;
+    }
+
+    #alarm_list_container{
+        max-height:29rem;
+        overflow-y: scroll;
+    }
+
+    #clear_all{
+        font-size:3rem;
+        font-weight: bold;
+        margin-bottom:-1.5rem;
+    }
+
+    .display_alarms{
+        min-height:5rem;
+        font-size:3rem;
+        
+    }
+
+    button{
+        font-size: 2rem;
+    }
+
+    /* #no_alarm{
+        margin-bottom: 1rem;
+    } */
+
+    #alarm_list_head{
+        font-size:2.5rem;
+        height:auto;
+        padding:0 !important;
+        /* margin:2rem; */
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 80%;
+        margin-top:1rem;
+    }
+
+    #setAlarm{
+        width:70%;
+        height:16rem;
+    }
+
+    /* h1{
+        margin-top:2rem;
+    } */
+
+    /* h2{
+        margin:3rem 0;
+    } */
+
+    #no_alarm{
+        font-size:1.4rem;
+    }
+
+    #clear_all{
+        font-size:1.2rem;
+        margin-top:-2rem;
+    }
+
+    .display_alarms{
+        width:70%;
+        max-height:1.6rem !important;
+        font-size: 1.6rem;
+        width:100%;
+    }
+
+    .fa-trash{
+        font-size:2.3rem  !important;
+    }
+
+    .fa-clock-0{
+        font-size: 2.3rem !important;
+    }
+    #alarm_list_container{
+        height:40% !important;
+        max-height:21rem;
+        width:80%;
+        overflow-y:scroll;
+    }
+  
+    #setAlarm h1{
+        font-size:1.8rem;
+        margin-bottom:.8rem;
+    }
 }
