--- a/index.css
+++ b/index.css
@@ -5,14 +5,14 @@
     padding:0;
 }
 
-body{
+:root{
+    font-size:62.5%;
     box-sizing: border-box; 
-    background-color: rgb(58, 56, 56);
-    font-size:1rem;
 }
 
 /*main container */
 #container{
+    background-color: rgb(58, 56, 56);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -52,9 +52,13 @@ body{
 }
 
 h1{
-    margin-top:.5rem;
+    margin-top:1rem;
     box-sizing: border-box;
-    font-size: 2.5rem;
+    font-size: 3.5rem;
+}
+
+#clock_icon{
+    font-size: 4rem;
 }
 
 /* animation for clock icon at the top on ringing */
@@ -78,7 +82,7 @@ h1{
 #clock{
     height:30%;
     width:50%;
-    font-size: 10rem;
+    font-size: 12rem;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -89,7 +93,7 @@ h1{
 /*Set Alarm container */
 #setAlarm{
     padding:1.5rem;
-    height:3rem;
+    height:10rem;
     width:50vw;
     display:flex;
     justify-content: space-around;
@@ -98,7 +102,7 @@ h1{
 }
 
 #setAlarm h1{
-    font-size:1.6rem;
+    font-size:3rem;
     margin:0;
 }
 
@@ -109,8 +113,8 @@ h1{
 
 
 input{
-    width:3rem;
-    height:2rem;
+    width:5rem;
+    height:3rem;
     margin-right:.1rem;
     outline: none;
     cursor: pointer;
@@ -128,20 +132,24 @@ input[type=radio]{
     margin-left:.6rem;
 }
 
+label{
+    font-size:1.5rem;
+}
+
 /* container for saving alarm and stopping ringing alarm */
 #set_container{
     width:300px;
-    height:50px;
+    height:100%;
     display: flex;
-    justify-content: space-evenly;
-    align-items: flex;
-    margin:10px 0;
+    justify-content: center;
+    align-items: center;
+    /* margin:10px 0; */
 }
 
 /*button to start and stop */
 #set,#stop{
-    height:40px;
-    width:90px;
+    height:35px;
+    width:78px;
     border:1px solid white;
     border-radius:10px;
     padding:0 17px;
@@ -165,7 +173,7 @@ input[type=radio]{
 
 /* Alarm List container */
 #alarm_list_container{
-    max-height:11.5rem;
+    max-height:17.5rem;
     width:50vw;
     display: flex;
     justify-content: flex-start;
@@ -201,6 +209,7 @@ input[type=radio]{
 .alarm_time{
     min-width:50%;
     font-weight: 800;
+    font-size:1.5rem;
 }
 
 button{
@@ -209,9 +218,12 @@ button{
     outline:none;
 }
 
+.display_alarms .fa-clock-o{
+    font-size:2.5rem !important;
+}
 /*delete button for deleting  specific alarm*/
 .fa-trash{
-    font-size: 25px;
+    font-size:2.5rem !important;
     color:white;
     border:none;
     cursor: pointer;
@@ -229,6 +241,7 @@ button{
     align-items: center;
     width:50%;
     margin-top:20px;
+    font-size:2rem;
 }
 
 /*to display or not display heading "Alarms" depending upon the alarm set or not */
@@ -247,7 +260,7 @@ button{
     padding:0 17px;
     height:40px;
     margin-right:35px;
-    font-size:1.2rem;
+    font-size:1.5rem;
     transition:all .3s ease;
 }
 
@@ -259,638 +272,331 @@ button{
 
 
 
-@media screen and (max-width:800px){
 
-    #container{
-        width:100%;
-    }
-    #clock_icon{
-        font-size:3rem;
-    }
 
-    h1{
-        font-size:2.5rem;
-    }
-    #clock{
-        max-width:60% !important;
-        /* font-size:5rem; */
-        height:15%;
-        font-weight:bold;
-   
-      
-    }
 
-    #setAlarm{
-        max-height:30% !important;
-        width:10rem;
-        display:flex;
-        flex-direction: column;
-        justify-content: space-around;
 
-        /* background-color: aquamarine; */
-    }
 
-    #set_container{
-        width:70%;
-        /* background-color: blue; */
-    }
-    #set,#stop{
-        height:3rem;
-        width:7rem;
-        font-size:1.7rem;
-        border:5px solid white;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*MEDIA QUERY*/
+
+
+@media  screen and (max-width:1000px){
+    :root{
+        font-size:40%;
     }
 
-    #input_div{
-        width:3rem;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        height:3rem;
-
-    }
-    input{
-        height:2.8rem;
-        width:3rem;
-        font-size:1.5rem;
-        text-align: center;
-    }
-    label{
-        font-size:1.5rem;
-        margin-right:1rem;
-        padding-left:.7rem;
-    }
-    form{
-        display: flex;
-        justify-content: center;
-        align-items: space-around;
-        margin-left:.3rem;
-    }
-    input[type=radio]{
-        transform: scale(1);
-        margin-right:2px;
-        font-size:1rem;
+    body{
+        overflow: hidden;
     }
 
-    #alarm_list_container{
-        max-height:29rem;
-        overflow-y: scroll;
-    }
+    /*main container */
+#container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width:100vw !important;
+    max-height:100vh !important;
+    position: relative;
+    color:white;
+}
 
-    #clear_all{
-        font-size:3rem;
-        font-weight: bold;
-        margin-bottom:-1.5rem;
-    }
+/* animation when Alarm ringingn */
+.colors{
+    animation:colors 0.7s ease-in-out;
+    transition:all .1s ease;
+    animation-iteration-count: infinite;
+}
 
-    .display_alarms{
-        min-height:5rem;
-        font-size:3rem;
-        
+@keyframes colors {
+    0%{
+        background-color: red;
     }
+    20%{
+        background-color: blue;
+    }
+    40%{
+        background-color: green;
+    }
+    60%{
+        background-color: rgb(233, 233, 22);
+    }
+    80%{
+        background-color: purple;
+    }
+    100%{
+        background-color: pink;
+    } 
+}
 
-    button{
-        font-size: 2rem;
-    }
+h1{
+    margin-top:3rem;
+    box-sizing: border-box;
+    font-size: 10rem !important;
 
-    #no_alarm{
-        margin-bottom: 1rem;
-    }
+}
 
-    #alarm_list_head{
-        font-size:2.5rem;
-        height:auto;
-        padding:0 !important;
-        margin:0;
-        /* margin:2rem; */
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 80%;
-    }
+#clock_icon{
+    font-size: 5vmin !important;
+    height:5%;
+}
 
-    #setAlarm{
-        width:70%;
-        /* height:16rem; */
-    }
+/* animation for clock icon at the top on ringing */
+.ringing{
+    margin-top: 5%;
+    animation-name:ringing ;
+    animation:ringing 0.7s ease-in-out both;
+    transform-origin:50% 0 ;
+    animation-iteration-count: infinite;
+}
 
-    /* h2{
-        margin:3rem 0;
-    } */
+@keyframes ringing {
+   0%{transform:scale(1.5); color:red  }
+   20%{transform:scale(1);color:blue   }
+   40%{transform:scale(1.6); color:green  }
+   80%{transform:scale(1);   color:yellow}
+   10%{transform:scale(1.5);  color:pink }
+}
 
-    #no_alarm{
-        font-size:2.4rem;
-    }
+/*To show current Tiime*/
+#clock{
+    height:13%;
+    width:80%;
+    font-size: 12vmin;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background-size: 100%;;
+    color:rgb(125, 42, 202);
+    font-weight: bold;
+}
 
-    #clear_all{
-        font-size:1.8rem;
-        margin-top:-2rem;
-    }
+/*Set Alarm container */
+#setAlarm{
+    padding:1rem;
+    height:20% !important;
+    width:80%;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgb(125, 42, 202);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin:0;
+}
 
-    .display_alarms{
-        width:70%;
-        max-height:1.6rem !important;
-        font-size: 1.6rem;
-        width:100%;
-    }
+#setAlarm h1{
+    font-size:6vmin !important;
+    margin:0;
+    height:20%;
+}
 
-    .fa-trash{
-        font-size:2.3rem  !important;
-    }
-
-    .fa-clock-0{
-        font-size: 2.3rem !important;
-    }
-    #alarm_list_container{
-        height:40vh !important;
-        max-height:21rem;
-        width:80%;
-        overflow-y:scroll;
-    }
-  
+#input_div{
+    display:flex;
+    align-items: center;
+    margin:0;
+    padding :0;
+    height:40%;
+    width:80%;
 }
 
 
-@media screen and (max-width:1000px){
+input{
+    width:20%;
+    height:60%;
+    margin-right:.1rem;
+    outline: none;
+    cursor: pointer;
+    font-size:4em !important;
+}
+form{
+    margin-left:.2rem;
+}
 
-    #container{
-        width:100%;
-    }
-    #clock_icon{
-        font-size:2rem;
-    }
+input[type=radio]{
+    height:1.5rem;
+    width:1.5rem;
+    transform: scale(1.3);
+    font-size: 1.2rem;
+    color:red;
+    margin-left:2vmin;
+}
 
-    h1{
-        font-size:2.5rem;
-    }
-    #clock{
-        max-width:60%;
-        font-size:5rem;
-        height:15%;
-        font-weight:bold;
-      
-    }
+label{
+    font-size:3vmin !important;
+    margin-left:2vmin;
+}
 
-    #setAlarm{
-        height:auto !important;
-        width:10rem;
-        display:flex;
-        flex-direction: column;
-        justify-content: space-around;
+/* container for saving alarm and stopping ringing alarm */
+#set_container{
+    width:80%;
+    height:50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-        /* background-color: aquamarine; */
-    }
+/*button to start and stop */
+#set,#stop{
+    height:70%;
+    width:35%;
+    border:1px solid white;
+    border-radius:10px;
+    padding:0 17px;
+    color:white;
+    margin-right:3px;
+    cursor: pointer;
+    border:1px solid white;
+    font-weight: bold;
+    transition:all .2s ease;
+    font-size: 4vmin !important;
+}
 
-    #set_container{
-        width:70%;
-        /* background-color: blue; */
-    }
-    #set,#stop{
-        height:3rem;
-        width:7rem;
-        font-size:1.7rem;
-        border:5px solid white;
-    }
+#set:hover{
+    border:3px solid greenyellow;
+    color:greenyellow;
+}
 
-    #input_div{
-        width:3rem;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        height:3rem;
-        padding-bottom: 1rem;
-    }
-    input{
-        height:2.8rem;
-        width:3rem;
-        font-size:1.5rem;
-        text-align: center;
-    }
-    label{
-        font-size:1.5rem;
-        margin-right:1rem;
-        padding-left:.7rem;
-    }
-    form{
-        display: flex;
-        justify-content: center;
-        align-items: space-around;
-        margin-left:.3rem;
-    }
-    input[type=radio]{
-        transform: scale(1);
-        margin-right:2px;
-        font-size:1rem;
-    }
+#stop:hover{
+    border:3px solid red;
+    color:red;
+}
 
-    #alarm_list_container{
-        max-height:29rem;
-        overflow-y: scroll;
-    }
+/* Alarm List container */
+#alarm_list_container{
+    min-height:44% !important;
+    width:80%;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: scroll;
+    /* margin-bottom:10%; */
+}
 
-    #clear_all{
-        font-size:3rem;
-        font-weight: bold;
-        margin-bottom:-1.5rem;
-    }
+/* display all the alarms set */
+.display_alarms{
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    width:100%;
+    min-height:20%;
+    margin-top:.6%;
+    color:white;
+    cursor:pointer;
+    transition:all .2s ease;
+    background-color: rgb(125, 42, 202);
+}
 
-    .display_alarms{
-        min-height:5rem;
-        font-size:3rem;
-        
-    }
+.display_alarms:hover{
+    background-color:rgb(189, 155, 220); 
+    transition:all .1 ease;
+}
 
-    button{
-        font-size: 2rem;
-    }
+.display_alarms:hover .alarm_time{
+    color:black;
+}
 
-    /* #no_alarm{
-        margin-bottom: 1rem;
-    } */
+.alarm_time{
+    min-width:50%;
+    font-weight: 800;
+    font-size:4vmin;
+}
 
-    #alarm_list_head{
-        font-size:2.5rem;
-        height:auto;
-        padding:0 !important;
-        /* margin:2rem; */
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 80%;
-        margin-top:1rem;
-    }
+button{
+    border:none;
+    outline:none;
+    
+}
 
-    #setAlarm{
-        width:70%;
-        height:16rem;
-    }
+.display_alarms .fa-clock-o{
+    font-size:8vmin !important;
+}
+/*delete button for deleting  specific alarm*/
+.fa-trash{
+    font-size:8vmin !important;
+    color:white;
+    border:none;
+    cursor: pointer;
+    transition:all .2s ease;
+}
 
-    /* h1{
-        margin-top:2rem;
-    } */
+.fa-trash:hover{
+    transform:scale(1.2);
+    color:rgb(247, 7, 7);
+}
 
-    /* h2{
-        margin:3rem 0;
-    } */
+#alarm_list_head{
+    display: flex;
+    justify-content: space-between !important;
+    align-items: center;
+    width:80%;
+    /* margin-top:20px; */
+    /* font-size:3rem; */
+    height:6%;
+    
+}
 
-    #no_alarm{
-        font-size:1.4rem;
-    }
+/*to display or not display heading "Alarms" depending upon the alarm set or not */
+.invisible{
+    display:none;
+    color:red;
+    transition:all .2s ease;
+}
 
-    #clear_all{
-        font-size:1.2rem;
-        margin-top:-2rem;
-    }
+#clear_all{
+    color:white;;
+    cursor:pointer;
+    border-radius:10px;
+    height:80%;
+    width:30%;
+    font-size:7vmin;
+    transition:all .3s ease;
+    margin:0;
+}
 
-    .display_alarms{
-        width:70%;
-        max-height:1.6rem !important;
-        font-size: 1.6rem;
-        width:100%;
-    }
+#clear_all:hover{
+    color:rgb(97, 182, 235);
+    border:3px solid rgb(97, 182, 235);
+    font-weight: bold;
+}
 
-    .fa-trash{
-        font-size:2.3rem  !important;
-    }
-
-    .fa-clock-0{
-        font-size: 2.3rem !important;
-    }
-    #alarm_list_container{
-        height:40% !important;
-        max-height:21rem;
-        width:80%;
-        overflow-y:scroll;
-    }
-  
-    #setAlarm h1{
-        font-size:1.8rem;
-        margin-bottom:.8rem;
-    }
+#no_alarm{
+    font-size:7vmin !important;
 }
 
 
-@media screen and (max-width:500px){
-
-    #container{
-        width:100%;
-        height: 100%;
-    }
-    #clock_icon{
-        font-size:2rem;
-    }
-
-    h1{
-        font-size:2.5rem;
-    }
-    #clock{
-        max-width:60%;
-        font-size:5rem;
-        height:15%;
-        font-weight:bold;
-      
-    }
-
-    #setAlarm{
-        height:auto !important;
-        width:10rem;
-        display:flex;
-        flex-direction: column;
-        justify-content: space-around;
-
-        /* background-color: aquamarine; */
-    }
-
-    #set_container{
-        width:70%;
-        /* background-color: blue; */
-    }
-    #set,#stop{
-        height:3rem;
-        width:7rem;
-        font-size:1.7rem;
-        border:5px solid white;
-    }
-
-    #input_div{
-        width:3rem;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        height:3rem;
-        padding-bottom: 1rem;
-    }
-    input{
-        height:2.8rem;
-        width:3rem;
-        font-size:1.5rem;
-        text-align: center;
-    }
-    label{
-        font-size:1.5rem;
-        margin-right:1rem;
-        padding-left:.7rem;
-    }
-    form{
-        display: flex;
-        justify-content: center;
-        align-items: space-around;
-        margin-left:.3rem;
-    }
-    input[type=radio]{
-        transform: scale(1);
-        margin-right:2px;
-        font-size:1rem;
-    }
-
-    #alarm_list_container{
-        max-height:29rem;
-        overflow-y: scroll;
-    }
-
-    #clear_all{
-        font-size:3rem;
-        font-weight: bold;
-        margin-bottom:-1.5rem;
-    }
-
-    .display_alarms{
-        min-height:5rem;
-        font-size:3rem;
-        
-    }
-
-    button{
-        font-size: 2rem;
-    }
-
-    /* #no_alarm{
-        margin-bottom: 1rem;
-    } */
-
-    #alarm_list_head{
-        font-size:2.5rem;
-        height:auto;
-        padding:0 !important;
-        /* margin:2rem; */
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 80%;
-        margin-top:1rem;
-    }
-
-    #setAlarm{
-        width:70%;
-        height:16rem;
-    }
-
-    /* h1{
-        margin-top:2rem;
-    } */
-
-    /* h2{
-        margin:3rem 0;
-    } */
-
-    #no_alarm{
-        font-size:1.4rem;
-    }
-
-    #clear_all{
-        font-size:1.2rem;
-        margin-top:-2rem;
-    }
-
-    .display_alarms{
-        width:70%;
-        max-height:1.6rem !important;
-        font-size: 1.6rem;
-        width:100%;
-    }
-
-    .fa-trash{
-        font-size:2.3rem  !important;
-    }
-
-    .fa-clock-0{
-        font-size: 2.3rem !important;
-    }
-    #alarm_list_container{
-        height:40% !important;
-        max-height:21rem;
-        width:80%;
-        overflow-y:scroll;
-    }
-  
-    #setAlarm h1{
-        font-size:1.8rem;
-        margin-bottom:.8rem;
-    }
+    
 }
+    
 
 
-@media screen and (max-width:470px){
 
-    *{
-        box-sizing:border-box;
-    }
-    #container{
-        width:100%;
-        height:100%;
-    }
-    #clock_icon{
-        font-size:1.5rem;
-        margin-bottom: 1.rem;
-    }
 
-    h1{
-        font-size:2.5rem;
-    }
-    #clock{
-        width:60%!important;
-        font-size:4rem;
-        height:15%;
-        font-weight:bold;
-      
-    }
 
-    #setAlarm{
-        height:auto !important;
-        width:10rem;
-        display:flex;
-        flex-direction: column;
-        justify-content: space-around;
 
-        /* background-color: aquamarine; */
-    }
 
-    #set_container{
-        width:70%;
-        /* background-color: blue; */
-    }
-    #set,#stop{
-        height:3rem;
-        width:7rem;
-        font-size:1.7rem;
-        border:5px solid white;
-    }
 
-    #input_div{
-        width:3rem;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        height:3rem;
-        padding-bottom: 1rem;
-    }
-    input{
-        height:2.8rem;
-        width:2.4rem;
-        font-size:1.5rem;
-        text-align: center;
-    }
-    label{
-        font-size:1.5rem;
-        margin-right:.3rem;
-        padding-left:.3rem;
-    }
-    form{
-        display: flex;
-        justify-content: center;
-        align-items: space-around;
-        margin-left:.3rem;
-    }
-    input[type=radio]{
-        transform: scale(1);
-        /* margin-right:2px; */
-        font-size:1rem;
-        margin:0;
-        padding:0;
-    }
 
-    #alarm_list_container{
-        max-height:29rem;
-        overflow-y: scroll;
-    }
 
-    #clear_all{
-        font-size:3rem;
-        font-weight: bold;
-        margin-bottom:-1.5rem;
-    }
 
-    .display_alarms{
-        min-height:5rem;
-        font-size:3rem;
-        
-    }
 
-    button{
-        font-size: 2rem;
-    }
-
-    /* #no_alarm{
-        margin-bottom: 1rem;
-    } */
-
-    #alarm_list_head{
-        font-size:2.5rem;
-        height:auto;
-        padding:0 !important;
-        /* margin:2rem; */
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 80%;
-        margin-top:1rem;
-    }
-
-    #setAlarm{
-        width:70%;
-        height:16rem;
-    }
-
-    /* h1{
-        margin-top:2rem;
-    } */
-
-    /* h2{
-        margin:3rem 0;
-    } */
-
-    #no_alarm{
-        font-size:1.4rem;
-    }
-
-    #clear_all{
-        font-size:1.2rem;
-        margin-top:-2rem;
-    }
-
-    .display_alarms{
-        width:70%;
-        max-height:1.6rem !important;
-        font-size: 1.6rem;
-        width:100%;
-    }
-
-    .fa-trash{
-        font-size:2.3rem  !important;
-    }
-
-    .fa-clock-0{
-        font-size: 2.3rem !important;
-    }
-    #alarm_list_container{
-        height:40% !important;
-        max-height:21rem;
-        width:80%;
-        overflow-y:scroll;
-    }
-  
-    #setAlarm h1{
-        font-size:1.8rem;
-        margin-bottom:.8rem;
-    }
-}
+/*MEDIA QUERY 1000PX */
